--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <a class="nav-link" href="#">High Growth SMEs</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Events</a>
+        <a class="nav-link" href="#">Events</a> 
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Resources</a>
@@ -71,8 +71,7 @@
 <section>
   <div class="container-fluid section-c">
     <h2>
-      Affordable cloud-based services
-      + expert advice for your business
+      Affordable cloud-based services + expert advice for your business
     </h2>
     <h4>
       We get startups and high growth businesses. Here’s how we can take the smaller
@@ -86,7 +85,7 @@
             <h5 class="card-title"><img src="img/thumb.jfif"></h5>
              <h4>Bookkeeping & Payroll</h4>
               <p class="card-text">We can set you up or take it all off your hands. Your people will be paid. Your accounting done. Government obligations met. Easy.</p>
-                <a href="#" class="card-link card-btn">Card link</a>
+                <a href="#" class="card-link card-btn">Know More</a>
           </div>
         </div>
       </div>
@@ -96,7 +95,7 @@
             <h5 class="card-title"><img src="img/thumb.jfif"></h5>
              <h4>Tax Services</h4>
               <p class="card-text" style="margin-top: 50px;">You’ve got better things to do than tax. But we haven’t. Plus, we can help you with tax-efficient structuring and overseas expansion.</p>
-                <a href="#" class="card-link card-btn">Card link</a>
+                <a href="#" class="card-link card-btn">Know More</a>
           </div>
         </div>
       </div>
@@ -106,7 +105,7 @@
             <h5 class="card-title"><img src="img/thumb.jfif"></h5>
              <h4>R & D and grants</h4>
               <p class="card-text" style="margin-top: 50px;">We can help you access government R&D tax benefits. And even help you get the cash back in advance through R&D forward funding.</p>
-                <a href="#" class="card-link card-btn">Card link</a>
+                <a href="#" class="card-link card-btn">Know More</a>
           </div>
         </div>
       </div>
@@ -116,7 +115,7 @@
             <h5 class="card-title"><img src="img/thumb.jfif"></h5>
              <h4>Virtual CFO</h4>
               <p class="card-text" style="margin-top: 50px;">Financial modelling, capital raising support, valuations, strategic advice … all the essentials for growth, funding and success.</p>
-                <a href="#" class="card-link card-btn" style="margin-top: 40px;">Card link</a>
+                <a href="#" class="card-link card-btn" style="margin-top: 40px;">Know More</a>
           </div>
         </div>
       </div>
