--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css?family=Catamaran:400,700&display=swap" rel="stylesheet">
 
-    <title>FIRST ACCOUNTANTS PTY LTD</title>
+    <title>STANDARD LEDGER, AUSTRALIA</title>
   </head>
   <body>
     
@@ -54,7 +54,7 @@
   <div class="overlay">
     <div class="section-b-inner">
       <h3>Helping your business grow</h3>
-      <h1>FIRST ACCOUNTANTS PTY LTD</h1>
+      <h1><img src="img/logo1.png" class="logo1">STANDARD LEDGER</h1>
       <p>
         Working with startups and high growth SMEs
       </p>
